--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,15 @@
 
 node_modules/
 
+/.sass-cache/
 Thumbs.db
+.DS_Store
+
+dist/
+build/
+.env
+*.log
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
